# 0x1-screenshot

./: .gitignore  0x1-screenshot.desktop  CMakeLists.txt  README.md  general.cfg
debian/: changelog  control  copyright  rules
include/: cfg.h  nnullptr-screenshot.h  sshot.h
lib/utils/include/: utils.h
src/: main.c  retrieve_selected_area.c  take_screenshot.c  upload_screenshot.c
src/cfg/: cfg_close.c  cfg_destroy.c  cfg_init.c  cfg_key_get_default_value.c  cfg_key_get_value.c  cfg_open.c
src/sshot/: sshot_capture.c  sshot_capture_alternate.c  sshot_select_area.c  sshot_upload.c  sshot_upload.c.c
